# devSnoopy

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml  README.md  deploy.sh  generate_data.sh
contract/neardev/: dev-account
contract/src/: lib.rs
docs/: readme.md
